[gd_scene load_steps=7 format=3 uid="uid://wmkr3if58oo6"]

[ext_resource type="PackedScene" uid="uid://c8f7vyg78v7n5" path="res://models/Brush.glb" id="1_3kfra"]
[ext_resource type="Script" path="res://Elias/Scripts/brush.gd" id="1_5yi7m"]

[sub_resource type="Animation" id="Animation_ulalg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3.14159, 0, 0)]
}

[sub_resource type="Animation" id="Animation_b8yak"]
resource_name = "Use"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(3.14159, -0.404916, 0), Vector3(2.18166, 1.309, 0), Vector3(3.14159, -0.404916, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eu10b"]
_data = {
"RESET": SubResource("Animation_ulalg"),
"Use": SubResource("Animation_b8yak")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ffhup"]
size = Vector3(6, 6, 6)

[node name="Brush" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -1, -2.53518e-06, 0, 2.53518e-06, -1, 0, 0, 0)
script = ExtResource("1_5yi7m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Brush")
libraries = {
"": SubResource("AnimationLibrary_eu10b")
}

[node name="Brush" parent="." instance=ExtResource("1_3kfra")]
transform = Transform3D(0.1, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, 0, 0, 0)

[node name="BrushArea" type="Area3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, 0, 0, 0)

[node name="BrushCollision" type="CollisionShape3D" parent="BrushArea"]
transform = Transform3D(1, -1.19209e-06, 2.20624e-12, 1.19209e-06, 1, -1.77636e-13, -9.98313e-13, -5.1017e-12, 0.999978, -3.15905e-06, 2.5, -7.30438e-12)
shape = SubResource("BoxShape3D_ffhup")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="BrushArea" to="." method="_on_brush_area_area_entered"]
